<resources>
    <string name="app_name">MyApp</string>
    <string name="String_alan_turing">Alan Turing\n23.7.1912 - 7.7.1954\nAlan Turing was an English computer scientist, mathematician, logician, cryptanalyst, philosopher, and theoretical biologist.Turing was highly influential in the development of theoretical computer science, providing a formalisation of the concepts of algorithm and computation with the Turing machine, which can be considered a model of a general purpose computer. Turing is widely considered to be the father of theoretical computer science and artificial intelligence.
    </string>
    <string name="String_ada_lovelace">Ada Lovelace\n10.10.1815 - 27.12.1852\nAugusta Ada King-Noel, Countess of Lovelace was an English mathematician and writer, chiefly known for her work on Charles Babbages proposed mechanical general-purpose computer, the Analytical Engine. She was the first to recognise that the machine had applications beyond pure calculation, and published the first algorithm intended to be carried out by such a machine. As a result, she is sometimes regarded as the first to recognise the full potential of a "computing machine" and the first computer programmer</string>
    <string name="String_von_neumann">John von Neumann\n28.12.1903 - 8.2.1957\nJohn von Neumann was a Hungarian-American mathematician, physicist, computer scientist, and polymath. He made major contributions to a number of fields, including mathematics (foundations of mathematics, functional analysis, ergodic theory, representation theory, operator algebras, geometry, topology, and numerical analysis), physics (quantum mechanics, hydrodynamics, and quantum statistical mechanics), economics (game theory), computing (Von Neumann architecture, linear programming, self-replicating machines, stochastic computing), and statistics.</string>
    <string name="String_turing_quote">A computer would deserve to be called intelligent if it could deceive a human into believing that it was human.</string>
    <string name="String_lovelace_quote">That brain of mine is something more than merely mortal; as time will show.</string>
    <string name="String_neumann_quote">Young man, in mathematics you dont understand things. You just get used to them.</string>
    <string name="String_wirth">Niklaus Wirth\n 15.2.1934\nNiklaus Emil Wirth (born 15 February 1934) is a Swiss computer scientist, best known for designing several programming languages, including Pascal, and for pioneering several classic topics in software engineering. In 1984 he won the Turing Award, generally recognized as the highest distinction in computer science, for developing a sequence of innovative computer languages.</string>
    <string name="String_wirth_quote">A good designer must rely on experience, on precise, logic thinking; and on pedantic exactness. No magic will do.</string>
    <string name="String_ritchie">Dennis Ritchie\n 9.9.1941 - 12.8.2011 \nDennis MacAlistair Ritchie was an American computer scientist.[2] He created the C programming language and, with long-time colleague Ken Thompson, the Unix operating system.[2] Ritchie and Thompson were awarded the Turing Award from the ACM in 1983, the Hamming Medal from the IEEE in 1990 and the National Medal of Technology from President Bill Clinton in 1999. Ritchie was the head of Lucent Technologies System Software Research Department when he retired in 2007. He was the "R" in K'n'R C, and commonly known by his username dmr.</string>
    <string name="String_stroustrup">Bjarne Stroustrup\n30.12.1950\nBjarne Stroustrup is a Danish computer scientist, who is most notable for the creation and development of the widely used C++ programming language. He is a visiting professor at Columbia University, and works at Morgan Stanley as a Managing Director in New York.</string>
    <string name="String_ritchie_quote">[C has] the power of assembly language and the convenience of … assembly language.</string>
    <string name="String_stroustrup_quote">C makes it easy to shoot yourself in the foot; C++ makes it harder, but when you do it blows your whole leg off.</string>
</resources>
